--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         "Observation : travaux à faire": document.getElementById('observationTravaux').value,
         "Travaux réalisées": document.getElementById('travauxRealises').value,
         "derniere Utilisation": document.getElementById('derniereUtilisation').value,
-        "Remarques gloable": document.getElementById('remarquesGlobales').value
+        "Remarques gloables": document.getElementById('remarquesGlobales').value
       };
 
       fetch(scriptURL, {
