--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <body>
   <header>
     <h1>Inventaire des Tentes</h1>
+    <small id="ne pas utiliser de caractéres spéciaux ni de virgules ds vos réponses" style="font-size: 0.8em; margin-left: 10px; color: #eee;"></small>
     <button type="button" onclick="chargerDonnees()">Afficher l'inventaire tente</button>
     <button onclick="ouvrirOngletInventaire()">Exporter toutes les tentes en CSV </button>
    
